--- a/HTML/charlie.html
+++ b/HTML/charlie.html
@@ -7,9 +7,11 @@
 </head>
 <body>
 
-	<button class="favorite styled" type="button">
+	<button class="favorite styled" type="button" id = "button" style="">
 	</button>
 
-	<img src="../Ressources/charlie.jpg" alt="Ou est charlie" />
+	<img src="../Ressources/charlie.jpg" alt="Ou est charlie" id = "image"/>
+
+	<script language="JavaScript" type="text/javascript" src="../JS/charlie.js"></script>
 </body>
 </html>
