--- a/HTML/charlie.html
+++ b/HTML/charlie.html
@@ -10,7 +10,13 @@
 	<button class="favorite styled" type="button" id = "button" style="">
 	</button>
 
+	<p id = "WIN">
+		CONGRATULATION YOU WIN
+	</p>
+
+
 	<img src="../Ressources/charlie.jpg" alt="Ou est charlie" id = "image"/>
+
 
 	<script language="JavaScript" type="text/javascript" src="../JS/charlie.js"></script>
 </body>
