quelques détails sur dark.html et sur rickroll.css

--- a/HTML/PAGEDARK.html
+++ b/HTML/PAGEDARK.html
@@ -6,6 +6,6 @@
 	<link rel="stylesheet" href="../CSS/dark.css">
 <body>
 	<h1 style="text-align: center;">Le mot de passe est sous vos yeux :) </h1>
-	<h2 style="text-align: center;">Ajoutez /12345 au lien dans votre barre d'URL </h2>
+	<h2 style="text-align: center;">Ajoutez /ptebn au lien dans votre barre d'URL pour passer à la suite. Le fragment de mot de passe est : [PLACEHOLDER] </h2>
 </body>
 </html>
