--- a/HTML/QR.html
+++ b/HTML/QR.html
@@ -4,38 +4,7 @@
     <meta content="">
 	<link rel="stylesheet" type="text/css" href="../CSS/QRStyle.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script>
-		var k = [38, 38, 40, 40, 37, 39, 37, 39],
-		n = 0;
-		$(document).keydown(function (e) {
-			if (e.keyCode === k[n++]) {
-				if (n === k.length) {
-					window.location.href='../Ressources/parlezAMIetentrez.zip';
-					n = 0;
-					return false;
-				}
-			}
-			else {
-				n = 0;
-			}
-		});
-	</script>
-	<script>
-		var m = [65,77,73],
-		l = 0;
-		$(document).keydown(function (e) {
-			if (e.keyCode === m[l++]) {
-				if (l === m.length) {
-					alert('mot de passe : mellon');
-					l = 0;
-					return false;
-				}
-			}
-			else {
-				l = 0;
-			}
-		});
-	</script>
+	<script type="text/javascript" src="../JS/QR.js"></script>
   </head>
   <body>
 	<p>1 1 1 1 1 1 1 0 1 0 1 1 1 1 <b>0</b> 0 1 0 0 1 1 0 1 1 1 1 1 1 1<br>
