--- a/HTML/COMBINAISON.html
+++ b/HTML/COMBINAISON.html
@@ -2,9 +2,30 @@
   <head>
     <title>Find the right Combinaison</title>
     <meta charset="utf-8">
-	<link rel="stylesheet" href="Combinaison.css">
+	<link rel="stylesheet" href="../CSS/Combinaison.css">
+	<script type="text/javascript" src="../JS/Combinaison.js"></script>
   </head>
   <body>
-	
+	<h1> Trouvez la bonne combinaison de boutons </h1>
+
+	<form>
+		<input class="favorite styled1" type="button" value="6" id="Id1" onclick="updateBtn(6);">
+		<input class="favorite styled2" type="button" value="38" id="Id2" onclick='updateBtn(38);'>
+		<input class="favorite styled3" type="button" value="59" id="Id3" onclick='updateBtn(59);'>
+		<input class="favorite styled4" type="button" value="4" id="Id4" onclick='updateBtn(4);'>
+		<input class="favorite styled4" type="button" value="25" id="Id5" onclick='updateBtn(25);'>
+		<input class="favorite styled1" type="button" value="67" id="Id6" onclick='updateBtn(67);'>
+		<input class="favorite styled2" type="button" value="51" id="Id7" onclick='updateBtn(51);'>
+		<input class="favorite styled3" type="button" value="35" id="Id8" onclick='updateBtn(35);'>
+		<input class="favorite styled3" type="button" value="16" id="Id9" onclick='updateBtn(16);'>
+		<input class="favorite styled4" type="button" value="73" id="Id10" onclick='updateBtn(73);'>
+		<input class="favorite styled1" type="button" value="20" id="Id11" onclick='updateBtn(20);'>
+		<input class="favorite styled2" type="button" value="11" id="Id12" onclick='updateBtn(11);'>
+		<input class="favorite styled2" type="button" value="96" id="Id13" onclick='updateBtn(96);'>
+		<input class="favorite styled3" type="button" value="61" id="Id14" onclick='updateBtn(61);'>
+		<input class="favorite styled4" type="button" value="3" id="Id15" onclick='updateBtn(3);'>
+		<input class="favorite styled1" type="button" value="22" id="Id16" onclick='updateBtn(22);'>
+    </form>
+
   </body>
  </html>
