--- a/HTML/didier.html
+++ b/HTML/didier.html
@@ -6,15 +6,9 @@
   <link rel="stylesheet" href="../CSS/didier.css">
 </head>
 <body>
-	<p id = "WIN">
-		CONGRATULATION 
-			YOU WIN
-	</p>
 	<a id = "FIND"></a>
-
+	<h1 id ="H1">On a perdu Didier, aidez nous à le retrouver !</h1>
 	<img src="../Ressources/didier.jpg" alt="Ou est charlie" id = "image"/>
-
-
 	<script language="JavaScript" type="text/javascript" src="../JS/didier.js"></script>
 </body>
 </html>
