--- a/HTML/PAGEDARK.html
+++ b/HTML/PAGEDARK.html
@@ -4,9 +4,13 @@
 	<meta charset="utf-8">
 	<title>Dark</title>
 	<link rel="stylesheet" href="../CSS/dark.css">
+	<script type="text/javascript" src="../JS/PAGEDARK.js"></script>
 <body>
-	<script language="JavaScript" type="text/javascript" src="../JS/verif1.js"></script>
+	<!--<script language="JavaScript" type="text/javascript" src="../JS/verif1.js"></script>-->
 	<h1 style="text-align: center;">Le mot de passe est sous vos yeux :) </h1>
 	<h2 style="text-align: center;">yoann</h2>
+	<form action="didier.html">
+		<input type="submit" value="Une fois l'indice trouvé, vous pouvez passer au suivant" class="center"/ onclick="suiv()">
+	</form>
 </body>
 </html>
