--- a/HTML/RICKROLL.html
+++ b/HTML/RICKROLL.html
@@ -11,5 +11,8 @@
 	
 		<source src="../Ressources/rickroll.mp4"/>
 	</video>-->
+	<form action="QR.html">
+		<input type="submit" value="Une fois l'indice trouvé, vous pouvez passer au suivant" class="center"/ onclick="suiv()">
+	</form>
 </body>
 </html>
