Revert "ajouté la video rickroll"
This reverts commit cbd7e4290bc727c7d069781b6c71333a107fbead.

--- a/HTML/RICKROLL.html
+++ b/HTML/RICKROLL.html
@@ -6,10 +6,11 @@
 	<link rel="stylesheet" href="../CSS/rickroll.css">
 <body>
 	<h1 style="text-align: center;">Observez</h1>
-	<video class="tab" controls>Your browser does not support the &lt;video&gt; tag.
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/MYZ67-Sh7kM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<!--<video class="tab" controls>Your browser does not support the &lt;video&gt; tag.
 	
 		<source src="../Ressources/rickroll.mp4"/>
-	</video>
+	</video>-->
 	<form action="QR.html">
 		<input type="submit" value="Une fois l'indice trouvé, vous pouvez passer au suivant" class="center"/ onclick="suiv()">
 	</form>
