--- a/HTML/didier.html
+++ b/HTML/didier.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="../CSS/didier.css">
 </head>
 <body>
-	<a id = "FIND"></a>
+	<button id = "FIND">Il faut parfoit prendre des raccourcis pour arriver à suivre ce sacré Didier</button>
+	<a id = "1"></a>
 	<h1 id ="H1">On a perdu Didier, aidez nous à le retrouver !</h1>
 	<img src="../Ressources/didier.jpg" alt="Ou est charlie" id = "image"/>
 	<script language="JavaScript" type="text/javascript" src="../JS/didier.js"></script>
