--- a/HTML/charlie.html
+++ b/HTML/charlie.html
@@ -7,15 +7,9 @@
 </head>
 <body>
 
-	<button class="favorite styled" type="button" id = "button" style="" onclick='ok()'>
-	</button>
-
+	<button id = "button"></button>
+	<a id = "1"></a>
 	<img src="../Ressources/charlie.jpg" alt="Ou est charlie" id = "image"/>
-
-	<p id = "WIN">
-		CONGRATULATION YOU WIN
-	</p>
-
 	<script language="JavaScript" type="text/javascript" src="../JS/charlie.js"></script>
 </body>
 </html>
